<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.GameActivity"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/GameQuestionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/Q1"
        android:textColor="@color/colorPrimary"


        android:textSize="24sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />


    <Button
        android:id="@+id/BtnResp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/Q2"

        android:textColor="@color/colorPrimaryDark"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="111dp" />


    <Button
        android:id="@+id/BtnResp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/Q3"
        android:textColor="@color/colorPrimaryDark"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="180dp" />


    <Button
        android:id="@+id/BtnResp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/Q4"

        android:textColor="@color/colorPrimaryDark"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="270dp" />
    <Button
        android:id="@+id/BtnResp4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/Q5"
        android:textColor="@color/colorPrimaryDark"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="180dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >
    <TextView
        android:id="@+id/ViewRep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center|bottom"
        android:text="@string/Choice"
        />

    </LinearLayout>
</LinearLayout>